<resources>
    <string name="app_name">Tin Tức</string>
    <string name="download_service_name">Tin Tức - Tải tin</string>
    <string name="about_us_text">
        Bài tập lớn - Lập trình Android - 20161\n\n
        Giảng viên hướng dẫn: Trần Hải Anh\n
        Nhóm 13:\n
        Phan Ngọc Lân - 20142505\n
        Lê Thành Lợi - 20142729
    </string>

    <string name="action_settings">Tùy chọn</string>
    <string name="action_add">Thêm nguồn tin</string>
    <string name="action_refresh">Tải lại</string>
    <string name="action_download">Tải về</string>
    <string name="action_search">Tìm kiếm</string>
    <string name="action_remove">Xóa</string>
    <string name="action_add_favorite">Thêm vào yêu thích</string>
    <string name="action_remove_favorite">Xóa khỏi yêu thích</string>
    <string name="action_next_article">Bài tiếp theo</string>
    <string name="action_prev_article">Bài trước</string>

    <string name="latest_label">Tin mới</string>
    <string name="world_label">Quốc tế</string>
    <string name="vn_label">Trong nước</string>
    <string name="entertain_label">Giải trí</string>
    <string name="sports_label">Thể thao</string>
    <string name="tech_label">Công nghệ</string>
    <string name="other_label">Khác</string>
    <string name="favorite_label">Yêu thích</string>
    <string name="downloaded_label">Đã tải về</string>

    <string name="load_more">Hiện bài cũ hơn</string>
    <string name="title_activity_preferences">Tùy Chọn</string>
    <string name="title_rss_preferences">RSS</string>
    <string name="title_about_us">Thông tin ứng dụng</string>

    <string name="request_rss_url">RSS: </string>
    <string name="request_rss_name">Tên kênh: </string>
    <string name="rss_name_hint">Trang web cung cấp kênh RSS. VD: VnExpress</string>
    <string name="request_rss_topic">Chủ đề: </string>
    <string name="request_rss_favorite">Yêu thích: </string>
    <string name="request_confirm">Thêm RSS</string>
    <string name="request_save">Lưu</string>
    <string name="request_cancel">Quay lại</string>
    <string name="request_delete_rss">Xóa RSS</string>

    <string name="notify_changes_saved">Các thay đổi đã được lưu</string>
    <string name="notify_no_network">Không có kết nối mạng</string>
    <string name="notify_add_success">Đã thêm RSS</string>
    <string name="notify_add_failure">Thêm RSS không thành công. Đảm bảo bạn đang có kết nối mạng và đường dẫn RSS là chính xác</string>
    <string name="notify_add_failure2">Thêm RSS không thành công. Đường dẫn RSS đã tồn tại</string>
    <string name="notify_download_start">Đang tải</string>
    <string name="notify_download_success">Đã tải xong</string>
    <string name="notify_download_failure">Tải không thành công</string>
    <string name="notify_download_redundant">Bài viết đã được tải</string>
    <string name="notify_delete">Đã xóa</string>
    <string name="notify_general_error">Đã có lỗi xảy ra</string>
    <string name="notify_loading_page">Đang tải trang</string>

    <string name="delete_warning">Chắc chắn xóa nguồn tin này ?\n(Bạn sẽ không thể bật lại trong News Feed) </string>
</resources>
