<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="project.nhom13.newsfeed.Main">
    <item android:title=""
        android:orderInCategory="90"
        android:id="@+id/blank" />
    <item android:title="@string/action_refresh"
        android:id="@+id/action_refresh"
        android:orderInCategory="98"
        android:icon="@android:drawable/ic_popup_sync"
        app:showAsAction="always" />
    <item android:title="@string/action_add"
        android:orderInCategory="99"
        android:id="@+id/action_add"
        android:icon="@android:drawable/ic_input_add"
        android:visible="true"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        android:enabled="true"
        app:showAsAction="ifRoom"
        android:icon="@android:drawable/ic_menu_manage"
        android:visible="true" />
    <item android:title="@string/latest_label"
        android:id="@+id/item_latest"
        android:enabled="true" />
    <item android:title="@string/vn_label"
        android:id="@+id/item_vn"
        android:enabled="true" />
    <item android:title="@string/world_label"
        android:id="@+id/item_world"
        android:enabled="true" />
    <item android:title="@string/sports_label"
        android:id="@+id/item_sport"
        android:enabled="true" />
    <item android:title="@string/entertain_label"
        android:id="@+id/item_entertain" />
    <item android:title="@string/tech_label"
        android:id="@+id/item_tech" />
    <item android:title="@string/other_label"
        android:id="@+id/item_other" />
    <item android:title="@string/favorite_label"
        android:id="@+id/item_favorite" />
    <item android:title="@string/downloaded_label"
        android:id="@+id/item_downloaded" />
</menu>
