<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="project.nhom13.newsfeed.ArticleViewActivity">

    <item android:title="@string/action_download"
        android:id="@+id/action_download"
        android:icon="@drawable/downloadedicon"
        app:showAsAction="never" />
    <item android:title="@string/action_settings"
        app:showAsAction="never"
        android:icon="@android:drawable/ic_menu_manage"
        android:id="@+id/action_settings2" />
    <item
        android:id="@+id/prev"
        app:showAsAction="ifRoom"
        android:icon="@drawable/leftarrow"
        tools:ignore="MenuTitle"
        android:title="@string/action_prev_article" />
    <item android:title="@string/action_next_article"
        android:id="@+id/next"
        app:showAsAction="ifRoom"
        android:icon="@drawable/rightarrow"
        android:showAsAction="ifRoom" />
</menu>